增加、编辑分公司用户支付账号、密钥

--- a/Web/Web.config
+++ b/Web/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="ServerConnectionString" connectionString="Data Source=BOOKERVM\SQLEXPRESS;User ID=sa;Password=justdoit;Initial Catalog=xiaoxiong;Pooling=true" providerName="System.Data.SqlClient"/>
+    <add name="ServerConnectionString" connectionString="Data Source=BOOKERVM\SQLEXPRESS;User ID=sa;Password=justdoit;Initial Catalog=BearCarWash;Pooling=true" providerName="System.Data.SqlClient"/>
     <!--<add name="ServerConnectionString" connectionString="Data Source=.;User ID=sa;Password=sa;Initial Catalog=BearCarWash;Pooling=true" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 
