初步实现swiftpass支付

--- a/Web/App_Data/WebSet.ini
+++ b/Web/App_Data/WebSet.ini
@@ -11,7 +11,7 @@ Phone=4001155668
 Mobile=13932824567
 Fax=0318-2222265
 Address=衡水市大陆裕丰H座一单元1002室
-URL=www.xiaoxiongxiche.com
+URL=www.xiaoxiongxiche.com:88
 HotCity=北京,山东,重庆,广州,上海,天津
 [WeiXinInfo]
 MchId=1278214701
